--- a/hive.yml
+++ b/hive.yml
@@ -20,10 +20,10 @@ attributes:
   node_type: null
   auto_accounts:
     help: |
-      Select the slurm group account (i.e adamgrp)
+      Select the slurm group account (i.e hpccfgrp)
   auto_queues:
     help: |
-      Select a slurm partition. **We strongly recommend a high priority partition**
+      Select a slurm partition.
   cores:
     widget: "number_field"
     label: "Number of cores"
